<resources>
    <string name="app_name">打卡终结者</string>
    <string name="watching">正在监控当前位置是否超出打卡范围</string>
    <string name="lng_lat">经度：%1$s,纬度：%2$s</string>
    <string name="start_time">%s开始提醒</string>
    <string name="already_done">已完成</string>
    <string name="ready_remind">准备提醒</string>
    <string name="reminding">提醒中</string>
    <string name="finish_ahead_of_schedule">提前完成</string>
    <string name="skip">跳过今日</string>
    <string name="finish_task">完成任务</string>
    <string name="edit_required">必填</string>
    <string name="edit_choose">选填</string>

    <string name="dialog_tip">提示</string>
    <string name="cancel">取消</string>
    <string name="name">任务名称：</string>
    <string name="distance">打卡距离(m):</string>
    <string name="task_type">任务类型</string>
    <string name="remind_time">提醒时间：</string>
    <string name="remind_day">生效日期：</string>
    <string name="check_in_pos">打卡位置:</string>
	<string name="add">添加</string>
	<string name="confirm">确认</string>
    <string name="edit_require">必填</string>
    <string name="locate_not_finished">定位未完成，请稍后再尝试</string>
    <string name="content_empty">必填内容不能为空</string>
    <string name="delete">删除</string>
    <string name="confirm_delete">确定删除该任务吗？</string>
    <string name="need_execute_task">您有%d个任务需要执行</string>
    <string name="no_permission">没有获取到相关权限，可能导致定位不准</string>

    <string-array name="task_types_arr">
        <item>上班</item>
        <item>下班</item>
    </string-array>
</resources>
