<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:layout_height="match_parent"
		tools:context=".TaskEditActivity">
	<LinearLayout android:layout_width="match_parent"
				  android:orientation="vertical"
				  android:layout_height="match_parent">


	<LinearLayout android:layout_width="match_parent"
				  android:orientation="horizontal"
				  android:paddingTop="15dp"
				  android:paddingLeft="10dp"
				  android:paddingRight="10dp"
				  android:paddingBottom="5dp"
				  android:focusableInTouchMode="true"
				  android:focusable="true"
				  android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:text="@string/name"
				  android:textSize="15sp"
		/>
		<EditText android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:id="@+id/etName"
				  android:textSize="15sp"
				  android:hint="@string/edit_required"
				  android:textColorHint="@color/red"
				  android:textColor="@android:color/holo_blue_dark"
				  android:gravity="right"
		/>

	</LinearLayout>
	<View android:layout_width="match_parent"
		  android:layout_height="0.5dp"
		  android:background="#cccccc"/>
	<LinearLayout android:layout_width="match_parent"
				  android:orientation="horizontal"
				  android:paddingTop="15dp"
				  android:paddingLeft="10dp"
				  android:paddingBottom="5dp"
				  android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:text="@string/task_type"
				  android:textSize="15sp"
		/>
		<Spinner android:layout_width="match_parent"
				 android:layout_height="wrap_content"
				 android:entries="@array/task_types_arr"
				 android:id="@+id/spType"
				 android:gravity="right"
		/>
	</LinearLayout>

	<View android:layout_width="match_parent"
		  android:layout_height="0.5dp"
		  android:background="#cccccc"/>
	<LinearLayout android:layout_width="match_parent"
				  android:orientation="horizontal"
				  android:paddingTop="15dp"
				  android:paddingLeft="10dp"
				  android:paddingRight="10dp"
				  android:paddingBottom="5dp"
				  android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:text="@string/remind_time"
				  android:textSize="15sp"
		/>
		<TextView android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:id="@+id/tvTime"
				  android:textColor="@android:color/holo_blue_dark"
				  android:gravity="right"
				  android:hint="@string/edit_required"
				  android:textColorHint="@color/red"
		/>
	</LinearLayout>

	<View android:layout_width="match_parent"
		  android:layout_height="0.5dp"
		  android:background="#cccccc"/>
	<LinearLayout android:layout_width="match_parent"
				  android:orientation="horizontal"
				  android:paddingTop="15dp"
				  android:paddingLeft="10dp"
				  android:paddingRight="10dp"
				  android:paddingBottom="5dp"
				  android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:text="@string/remind_day"
				  android:textSize="15sp"
		/>
		<TextView android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  tools:text="星期一，星期二，星期三，星期四，星期五，星期六，星期天"
				  android:textColor="@android:color/holo_blue_dark"
				  android:id="@+id/tvWeek"
				  android:hint="@string/edit_required"
				  android:textColorHint="@color/red"
				  android:gravity="right"
		/>
	</LinearLayout>

	<View android:layout_width="match_parent"
		  android:layout_height="0.5dp"
		  android:background="#cccccc"/>
	<LinearLayout android:layout_width="match_parent"
				  android:orientation="horizontal"
				  android:paddingTop="15dp"
				  android:paddingLeft="10dp"
				  android:paddingRight="10dp"
				  android:paddingBottom="5dp"
				  android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:text="@string/check_in_pos"
				  android:textSize="15sp"
		/>
		<TextView android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  tools:text="二维火大厦"
				  android:textColor="@android:color/holo_blue_dark"
				  android:id="@+id/tvAddr"
				  android:hint="@string/edit_required"
				  android:textColorHint="@color/red"
				  android:gravity="right"
		/>
	</LinearLayout>

	<View android:layout_width="match_parent"
		  android:layout_height="0.5dp"
		  android:background="#cccccc"/>

		<Button android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/red"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:layout_marginTop="20dp"
				android:text="@string/delete"
				android:textColor="@android:color/white"
				android:textSize="16sp"
				android:id="@+id/btnDelete"
		/>
	</LinearLayout>
</LinearLayout>